--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       height: 100%;
     }
 
+    .trusted {
+      font-style: italic;
+      color: #f0a034;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+    }
+
+
     .container {
       background: url("Background.png") no-repeat center center / cover;
       min-height: 100vh;
@@ -569,8 +577,10 @@
     <div class="main-content">
       <div class="left-content">
         <div class="title">Eid Al-Adha <span>Luaskan Manfaat Qurbanmu</span></div>
+
         <div class="description">
-          Menyediakan penjualan hewan qurban dengan kualitas terbaik
+          <p class="trusted"><b>** Dipercaya sejak tahun 2017 **</b></p>
+          Menyediakan penjualan hewan qurban dengan kualitas terbaik...
         </div>
         <a href="#qurban"><button class="btn">SEE MORE</button></a>
         <div class="social-icons">
